@@ -1,36 +1,37 @@
 require File.dirname(__FILE__) + '/../test_helper'
 
 class Remote<%= class_name %>Test < Test::Unit::TestCase
-  AMOUNT = 100
+  
 
   def setup
     @gateway = <%= class_name %>Gateway.new(fixtures(:<%= class_name.underscore %>))
-
-    @creditcard = credit_card('4000100011112224')
-
+    
+    @amount = 100
+    @credit_card = credit_card('4000100011112224')
     @declined_card = credit_card('4000300011112220')
-
-    @options = { :address => { :address1 => '1234 Shady Brook Lane',
-                              :zip => '90210'
-                             }
-               }
+    
+    @options = { 
+      :order_id => '1',
+      :billing_address => address,
+      :description => 'Store Purchase'
+    }
   end
   
   def test_successful_purchase
-    assert response = @gateway.purchase(AMOUNT, @creditcard, @options)
-    assert_equal 'REPLACE WITH SUCCESS MESSAGE', response.message
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
     assert_success response
+    assert_equal 'REPLACE WITH SUCCESS MESSAGE', response.message
   end
 
   def test_unsuccessful_purchase
-    assert response = @gateway.purchase(AMOUNT, @declined_card, @options)
-    assert_equal 'REPLACE WITH FAILED PURCHASE MESSAGE', response.message
+    assert response = @gateway.purchase(@amount, @declined_card, @options)
     assert_failure response
+    assert_equal 'REPLACE WITH FAILED PURCHASE MESSAGE', response.message
   end
 
   def test_authorize_and_capture
-    amount = AMOUNT
-    assert auth = @gateway.authorize(amount, @creditcard, @options)
+    amount = @amount
+    assert auth = @gateway.authorize(amount, @credit_card, @options)
     assert_success auth
     assert_equal 'Success', auth.message
     assert auth.authorization
@@ -39,18 +40,18 @@ class Remote<%= class_name %>Test < Test::Unit::TestCase
   end
 
   def test_failed_capture
-    assert response = @gateway.capture(AMOUNT, '')
+    assert response = @gateway.capture(@amount, '')
     assert_failure response
     assert_equal 'REPLACE WITH GATEWAY FAILURE MESSAGE', response.message
   end
 
   def test_invalid_login
-    gateway = <%= class_name %>Gateway.new({
-        :login => '',
-        :password => ''
-      })
-    assert response = gateway.purchase(AMOUNT, @creditcard, @options)
-    assert_equal 'REPLACE WITH FAILURE MESSAGE', response.message
+    gateway = <%= class_name %>Gateway.new(
+                :login => '',
+                :password => ''
+              )
+    assert response = gateway.purchase(@amount, @credit_card, @options)
     assert_failure response
+    assert_equal 'REPLACE WITH FAILURE MESSAGE', response.message
   end
 end
